--- a/views/rss.ejs
+++ b/views/rss.ejs
@@ -6,6 +6,7 @@
     <description>Insight By Players</description>
     <language>en-us</language>
     <copyright>Copyright © 2014 Football by Football, LLC. All rights reserved</copyright>
+    <atom:link href="http://www.footballbyfootball.com/rss" rel="self" type="application/rss+xml" />
     <% posts.forEach(function(entry){ %>
       <item>
         <title><%= entry.title %></title>
@@ -51,7 +52,7 @@
             <% } %>
           ]]>
         </description>
-        <pubDate><%= new Date(entry.updated_date) %></pubDate>
+        <pubDate><%= new Date(entry.updated_date).toUTCString() %></pubDate>
         <link><%= 'http://www.footballbyfootball.com/column/' + entry.slug %></link>
         <guid><%= 'http://www.footballbyfootball.com/column/' + entry.slug %></guid>
       </item>
