--- a/views/rss.ejs
+++ b/views/rss.ejs
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<rss version="2.0" xmlns:yb="http://www.yardbarker.com/rss/overview/">
+<rss version="2.0" xmlns:yb="http://www.yardbarker.com/rss/overview/" xmlns:atom="http://www.w3.org/2005/Atom">
   <channel>
     <title>Football by Football</title>
     <link>http://www.footballbyfootball.com/rss</link>
@@ -56,5 +56,6 @@
         <guid><%= 'http://www.footballbyfootball.com/column/' + entry.slug %></guid>
       </item>
     <% }); %>
+    <atom:link href="http://www.footballbyfootball.com/rss" rel="self" type="application/rss+xml" />
   </channel>
 </rss>
