--- a/sass/css/app.scss
+++ b/sass/css/app.scss
@@ -968,7 +968,7 @@ img {
 			.copy {
 				font-size: 20px;
 				h3 {
-					font-size: 30px;
+					font-size: 22px;
 				}
 			}
 			
@@ -1739,6 +1739,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 				position: absolute;
 				bottom: 30px;
 				font-size: 40px;
+				margin-top: 0;
 			}
 		}
 	}
@@ -1762,7 +1763,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 			height: auto;
 			.title {
 				position: relative;
-				padding-top: 85px;
+				padding-top: 170px;
 			}
 		}
 		.lockerrooom-entry-title {
