Title font-sizes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,7 +72,7 @@
 									return item.updated_at != first_date;
 								}).splice(0,10).forEach(function(entry, index){ %>
 							<% if (entry.type == 'lockerroom'){ %>
-								<div class="row small-entry">
+								<div class="small-entry">
 									<div class="col-md-4">
 										<img src="https://s3.amazonaws.com/footballbyfootball-dev/lockerroom/sansjags_backer-small.jpg" />
 									</div>
