--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -81,6 +81,11 @@ body.column {
     .post-form .toolbar .link-tool a:hover {
       text-decoration: none;
       color: #202b2a; }
+.post-form .link_dialog {
+  text-align: center;
+  background: #eee; }
+  .post-form .link_dialog a, .post-form .link_dialog span {
+    padding: 0 15px; }
 .post-form .title {
   width: 100%;
   height: 40px;
@@ -92,7 +97,7 @@ body.column {
   line-height: 20px;
   width: 100%;
   margin: 0;
-  padding: 0 15px;
+  padding: 0 15px 15px;
   border-color: transparent;
   border: none; }
 .post-form .content:focus {
