--- a/sass/css/app.scss
+++ b/sass/css/app.scss
@@ -117,7 +117,13 @@ body.column {
 	// 	left: 50%;
 	// 	margin-left: -10px;
 	// }
-	
+	.link_dialog {
+		text-align: center;
+		background: #eee;
+		a, span {
+			padding: 0 15px;
+		}
+	}
 	.title {
 	  width: 100%;
 	  height: 40px;
@@ -130,7 +136,7 @@ body.column {
 		line-height: 20px;
 	  width: 100%;
 	  margin: 0;
-	  padding: 0 15px;
+	  padding: 0 15px 15px;
 	  border-color: transparent;
 	  border: none;
 	}
