--- a/views/player-edit.ejs
+++ b/views/player-edit.ejs
@@ -6,7 +6,7 @@
 
 <div class="container">
 	<div class="row">
-		<div id="react-content"></div>		
+		<div id="react-content" class="column-content"></div>		
 	</div>
 </div>
 <script src='/js/player-editor/player-edit.compiled.js' ></script>
