--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,6 +5,8 @@
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="/css/app.css">
+	<link rel="stylesheet" href="/css/trumbowyg.css">
+	<link rel="stylesheet" href="/css/ui/trumbowyg.colors.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no">
 
 	<script src="/js/jquery.1.9.min.js"></script>
@@ -80,6 +82,7 @@
 				<a href="/column/new">New Column</a>
 				<a href="/lockerroom/new">New LockerRoom</a>
 				<a href="/link/new">New Link</a>
+				<a href="/logout">Logout</a>
 			</div>
 		</div>
 	<% } %>
@@ -96,8 +99,11 @@
 			<div class="right-side">
 				<a href="/lockerrooms" class="article-links">Locker Rooms</a>
 				<a href="/columns" class="article-links">Columns</a>
-				<a href="https://twitter.com/FBbyFB" target="_blank" class="article-links"><span class="fa fa-twitter"></span></a>
-				<a href="https://www.facebook.com/FootballByFootball"  target="_blank" class="article-links"><span class="fa fa-facebook"></span></a>
+				<a href="https://twitter.com/FBbyFB" target="_blank" class="article-links social"><span class="fa fa-twitter"></span></a>
+				<a href="https://www.facebook.com/FootballByFootball"  target="_blank" class="article-links social"><span class="fa fa-facebook"></span></a>
+			</div>
+			<div class="lines-button" type="button" role="button">
+			  <span class="lines"></span>
 			</div>
 		</div>
 
