--- a/views/new_lockerroom.ejs
+++ b/views/new_lockerroom.ejs
@@ -1,22 +1,46 @@
 <%= include header %>
-<div class="lockerroom">
+
 	<div class="lockerroom-header" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/lockerroom/sansjags_backer.jpg);">
 
-				<h1 class="title"><%= lockerroom.title %>
-				<% if (locals.user) { %>
-					<a href="/lockerroom/<%= lockerroom.slug %>/edit"> Edit</a>
-				<% } %></h1>
-
-	</div>
-
-	<div class="lockerroom-controls">
-		<div class="locker-author-wrap">
-			<% lockerroom.lockerentries.forEach(function(entry) { %>
-				<div class="author-image-wrap">
-					<a href="#<%= entry.player._id %>"><div class="author-image" style="background-image: url(<%= entry.player.image_url %>)"></div></a>
-				</div>
-			<% });%>
-		</div>		
+		<h1 class="title"><%= lockerroom.title %>
+		<% if (locals.user) { %>
+			<a href="/lockerroom/<%= lockerroom.slug %>/edit"> Edit</a>
+		<% } %><br><span class="subtitle">Click on the Heads to see their Responses!</span></h1>
+		<div class="lockerroom-responses">
+			<span class="close-lockerroom-responses">×</span>
+			<span class="next-lockerroom-response"></span>
+			<span class="prev-lockerroom-response"></span>
+			<div class="container response-wrapper">		
+				<% lockerroom.lockerentries.forEach(function(entry, index) { %>
+					<div class="row response" id="<%= entry.player._id %>">
+						<div class="lockerroom-entry">
+							<div class="lockerrooom-entry-content cf">
+								<% entry.data.forEach(function(item){ %>
+									<% if (item.type == 'content') { %>
+										<%- item.content %>
+									<% } %>
+									<% if (item.type == 'image') { %>
+										<div class="caption-image <%= item.image_type %>">
+											<img src="https://s3.amazonaws.com/footballbyfootball-dev<%= item.image_url %>" />
+											<% if (item.caption) { %><p class="ap-image"><%= item.caption %></p><% } %>
+										</div>
+									<% } %>
+								<% }); %>
+							</div>
+						</div>
+					</div>
+				<% }); %>
+			</div>
+		</div>
+		<div class="lockerroom-controls">
+			<div class="locker-author-wrap">
+				<% lockerroom.lockerentries.forEach(function(entry, index) { %>
+					<div class="author-image-wrap">
+						<span class="lockerroom-response-control" data-id="<%= entry.player._id %>"><div class="author-image" style="background-image: url(<%= entry.player.image_url %>)"></div></span>
+					</div>
+				<% });%>
+			</div>		
+		</div>
 	</div>
 
 	<div class="lockerroom-content">
@@ -69,5 +93,4 @@
 		</div>
 	</div>
 
-</div>
 <%= include footer %>
