Homepage uncrate style home-column-sidebar

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1419,12 +1419,33 @@ a:hover {
   background-size: cover;
   background-position: center; }
 
+.lockerroom-sidebar {
+  margin: 20px 0 0; }
+
+.home-column-sidebar {
+  margin: 0;
+  max-height: 500px; }
+
+.home-column-sidebar.expanded {
+  max-height: inherit;
+  padding-bottom: 30px; }
+  .home-column-sidebar.expanded .home-column-overlay {
+    background: transparent;
+    height: 30px; }
+    .home-column-sidebar.expanded .home-column-overlay .up_arrow {
+      transform: rotate(45deg);
+      -webkit-transform: rotate(45deg);
+      bottom: 5px; }
+
+.home-column-overlay.expanded:hover .up_arrow {
+  opacity: 0.8; }
+
 .lockerroom-sidebar, .home-column-sidebar {
   text-align: center;
   color: white;
-  margin: 0;
   padding: 5px 15px 0;
-  background: #222; }
+  background: #222;
+  position: relative; }
   .lockerroom-sidebar a, .lockerroom-sidebar a:hover, .home-column-sidebar a, .home-column-sidebar a:hover {
     color: white; }
   .lockerroom-sidebar .lr-sidebar-title, .home-column-sidebar .lr-sidebar-title {
@@ -1433,13 +1454,46 @@ a:hover {
     margin: 0; }
   .lockerroom-sidebar .lr-sidebar-link, .home-column-sidebar .lr-sidebar-link {
     border-bottom: dashed 1px rgba(255, 255, 255, 0.7);
-    padding: 10px 15px;
+    padding: 10px 0;
     line-height: 1.5;
     margin: 0; }
     .lockerroom-sidebar .lr-sidebar-link span, .home-column-sidebar .lr-sidebar-link span {
       cursor: pointer; }
   .lockerroom-sidebar .lr-sidebar-link:last-child, .home-column-sidebar .lr-sidebar-link:last-child {
     border: none; }
+  .lockerroom-sidebar .home-column-overlay, .home-column-sidebar .home-column-overlay {
+    display: block;
+    overflow: hidden;
+    height: 100px;
+    background: -moz-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #222 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255, 255, 255, 0)), color-stop(100%, #222));
+    background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #222 100%);
+    background: -o-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #222 100%);
+    background: -ms-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #222 100%);
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #222 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00ffffff', endColorstr='#222',GradientType=0 );
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    cursor: pointer; }
+    .lockerroom-sidebar .home-column-overlay .up_arrow, .home-column-sidebar .home-column-overlay .up_arrow {
+      width: 20px;
+      height: 20px;
+      border-top: 2px solid white;
+      border-left: 2px solid white;
+      transform: rotate(225deg);
+      -webkit-transform: rotate(225deg);
+      position: absolute;
+      bottom: 15px;
+      left: 50%;
+      margin-left: -20px;
+      transition: 0.15s ease-out;
+      outline: none; }
+    .lockerroom-sidebar .home-column-overlay .up_arrow:hover, .home-column-sidebar .home-column-overlay .up_arrow:hover {
+      opacity: 0.8; }
+  .lockerroom-sidebar .home-column-overlay:hover .up_arrow, .home-column-sidebar .home-column-overlay:hover .up_arrow {
+    opacity: 0.8; }
 
 .home.lockerroom-sidebar {
   background: red; }
