--- a/views/header.ejs
+++ b/views/header.ejs
@@ -99,6 +99,8 @@
 			<div class="right-side">
 				<a href="/lockerrooms" class="article-links">Locker Rooms</a>
 				<a href="/columns" class="article-links">Columns</a>
+				<a href="/locks" class="article-links">Locks</a>
+				<a href="/fantasy" class="article-links">Fantasy</a>
 				<a href="https://twitter.com/FBbyFB" target="_blank" class="article-links social"><span class="fa fa-twitter"></span></a>
 				<a href="https://www.facebook.com/FootballByFootball"  target="_blank" class="article-links social"><span class="fa fa-facebook"></span></a>
 			</div>
