--- a/views/columns.ejs
+++ b/views/columns.ejs
@@ -1,6 +1,6 @@
 <%= include header %>
 <div class="container">
-	<h1 class="main-title">Columns</h1>
+	<h1 class="main-title"><%= page_title %></h1>
 </div>
 <div>
 	<div class="container">
